--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ url: "stingerstories.com" # the base hostname & protocol for your site, e.g. htt
 twitter_username: jekyllrb
 github_username:  jekyll
 
+include: _authors
 # Build settings
 #theme: jekyll-theme-hamilton
 
