Addec authors collection
Created an 'authors' collection in the config file
Linked author pages to posts using collection
Linked posts to author pages using collection

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,9 @@ url: "stingerstories.com" # the base hostname & protocol for your site, e.g. htt
 twitter_username: jekyllrb
 github_username:  jekyll
 
-include: _authors
+collections:
+  authors:
+    output: true
 # Build settings
 #theme: jekyll-theme-hamilton
 
