--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ plugins:
   - jekyll-paginate
 
 paginate: 4
-paginate_path: /page:num/
+paginate_path: "/flash/page:num/"
 
 
 # Exclude from processing.
