--- a/_config.yml
+++ b/_config.yml
@@ -37,12 +37,14 @@ collections:
 
 plugins:
   - jekyll-feed
-  - jekyll-paginate
+#  - jekyll-paginate
   - jekyll-sitemap
 
 paginate: 4
 paginate_path: "/flash/page:num/"
 
+gems:
+  - octopress-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default.
