--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,20 @@ plugins:
 #  - jekyll-paginate
   - jekyll-sitemap
 
-paginate: 4
-paginate_path: "/flash/page:num/"
+paginate:
+  collection:   posts
+  per_page:     4             # maximum number of items per page
+  limit:        5              # Maximum number of pages to paginate (false for unlimited)
+  permalink:    /flash/page:num/    # pagination path (relative to template page)
+  title_suffix: " - page :num" # Append to template's page title
+  category:     ''             # Paginate items in this category
+  categories:   []             # Paginate items in any of these categories
+  tag:          ''             # Paginate items tagged with this tag
+  tags:         []             # Paginate items tagged with any of these tags
+  reversed:     false          # Reverse the order of the documents
+
+#paginate: 4
+#paginate_path: "/flash/page:num/"
 
 gems:
   - octopress-paginate
